# DeepDriveMD-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  deepdrivemd_template.yaml  nohup.out  requirements_dev.txt  run.sh  run10.sh  run10g.sh  setup.cfg  setup.py  test.out  test.sh
deepdrivemd/: #deepdrivemd_stream.py#  config.py  config_stream.py  deepdrivemd.py  deepdrivemd_stream.py  utils.py
experiment/: README.md  bba  deepdrivemd_bridges.yaml
postproduction/: README.md  extract_data.py  plot_rmsd.py  radical-plotting.py  run_extract_2d.sh  run_extract_3d.sh  run_plot_2d.sh  run_plot_3d.sh
postproduction_stream/: 0.out  1.out  2.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out  Makefile  README.md  adios2pandasR4.py  archive.sh  archive_logs.py  bp2np_positions.py  contact_maps.py  distr.py  driver_embeddings.py  driver_positions.py  driver_rmsd.py  driver_timers.py  emb_agg.py  gantt_rmsd_streaming.ipynb  ligand_natoms.py  loss.py  loss_aae.py  loss_real.py  loss_real1.py  losses.csv  losses.ipynb  missing.py  plot_tsne.ipynb  positions.py  rename.py  rmsd.py  rmsd.sh  rmsd1.py  rmsd10.out  rmsd10g.out  (+22 more)
re.session.lassen708.yakushin.018771.0012/: .task_submitted.pkl  cmgr.0000.hb.cfg  cmgr.0000.hb.prof  cmgr.0000.prof  cmgr.0001.hb.cfg  cmgr.0001.hb.prof  cmgr.0001.prof  cmgr.0002.hb.cfg  cmgr.0002.prof  control_pubsub.cfg  control_pubsub.json  control_pubsub.prof  heartbeat.pub.0000.prof  log_pubsub.cfg  log_pubsub.json  log_pubsub.prof  pmgr.0000.prof  pmgr_launching.0000.json  pmgr_launching.0000.prof  pmgr_launching_queue.cfg  pmgr_launching_queue.get.0000.prof  pmgr_launching_queue.json  pmgr_launching_queue.prof  pmgr_launching_queue.put.0000.prof  radical.entk.appmanager.0000.prof  radical.entk.re.session.lassen708.yakushin.018771.0012.json  radical.entk.resource_manager.0000.prof  radical.entk.task_manager.0000.prof  radical.entk.wfprocessor.0000.prof  re.session.lassen708.yakushin.018771.0012.json  re.session.lassen708.yakushin.018771.0012.prof  stager.0000.json  stager.0000.prof  stager_request_queue.cfg  stager_request_queue.get.0000.prof  stager_request_queue.json  stager_request_queue.prof  stager_request_queue.put.0000.prof  stager_response_pubsub.cfg  stager_response_pubsub.json  (+31 more)
re.session.lassen708.yakushin.018782.0003/: .task_submitted.pkl  cmgr.0000.hb.cfg  cmgr.0000.hb.prof  cmgr.0000.prof  cmgr.0001.hb.cfg  cmgr.0001.hb.prof  cmgr.0001.prof  cmgr.0002.hb.cfg  cmgr.0002.prof  control_pubsub.cfg  control_pubsub.json  control_pubsub.prof  heartbeat.pub.0000.prof  log_pubsub.cfg  log_pubsub.json  log_pubsub.prof  pmgr.0000.prof  pmgr_launching.0000.json  pmgr_launching.0000.prof  pmgr_launching_queue.cfg  pmgr_launching_queue.get.0000.prof  pmgr_launching_queue.json  pmgr_launching_queue.prof  pmgr_launching_queue.put.0000.prof  radical.entk.appmanager.0000.prof  radical.entk.re.session.lassen708.yakushin.018782.0003.json  radical.entk.resource_manager.0000.prof  radical.entk.task_manager.0000.prof  radical.entk.wfprocessor.0000.prof  re.session.lassen708.yakushin.018782.0003.prof  stager.0000.json  stager.0000.prof  stager_request_queue.cfg  stager_request_queue.get.0000.prof  stager_request_queue.json  stager_request_queue.prof  stager_request_queue.put.0000.prof  stager_response_pubsub.cfg  stager_response_pubsub.json  stager_response_pubsub.prof  (+30 more)
re.session.lassen709.yakushin.018777.0005/: cmgr.0000.hb.cfg  cmgr.0000.hb.prof  cmgr.0000.prof  cmgr.0001.hb.cfg  cmgr.0001.hb.prof  cmgr.0001.prof  cmgr.0002.hb.cfg  cmgr.0002.prof  control_pubsub.cfg  control_pubsub.json  control_pubsub.prof  heartbeat.pub.0000.prof  log_pubsub.cfg  log_pubsub.json  log_pubsub.prof  (+54 more)
(+523 files in other folders)
