[metadata]
name = deepdrivemd
version = attr: deepdrivemd.__version__
description = Deep-Learning Driven Adaptive Molecular Simulations
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://deepdrivemd.github.io/
author = Alexander Brace, Hyungro Lee, Heng Ma, Anda Trifan, Matteo Turilli, Igor Yakushin, Li Tan, Andre Merzky, Tod Munson, Ian Foster, Shantenu Jha, Arvind Ramanathan
author_email = ramanathana@anl.gov, shantenu.jha@rutgers.edu
license = MIT License
keywords = workflow, machine-learning, complex-biological-systems, multi-scale-molecular-simulations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    radical.entk @ git+https://github.com/radical-cybertools/radical.entk@feature/change_base_path
    MDAnalysis
    numpy
    h5py==2.10.0
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
 
