[metadata]
name = deepdrivemd
version = attr: deepdrivemd.__version__
description = Deep-Learning Driven Adaptive Molecular Simulations
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://deepdrivemd.github.io/
author = Alexander Brace, Hyungro Lee, Heng Ma, Anda Trifan, Matteo Turilli, Igor Yakushin, Li Tan, Andre Merzky, Tod Munson, Ian Foster, Shantenu Jha, Arvind Ramanathan
author_email = ramanathana@anl.gov, shantenu.jha@rutgers.edu
license = MIT License
keywords = workflow, machine-learning, complex-biological-systems, multi-scale-molecular-simulations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages= find:
install_requires = 
    PyYAML>=5.4.1,<6.0.0
    pydantic[dotenv]>=1.8.2,<2.0.0
    radical.entk
    MDAnalysis
    numpy>=1.20
    tqdm
    h5py==2.10.0
    pathos
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[isort]
line_length = 118
profile = black
known_first_party=deepdrivemd
multi_line_output=3
combine_as_imports=True

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy, numpy.typing.mypy_plugin
strict = True
disallow_untyped_defs = True

